agent. modifications
- enable virtual threads
- update postman collection
- one thread per DatabasePort
- remove count from database